# ChangeLog for sys-kernel/dracut
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Mar 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Unblocked new systemd and udevd (>=210).

  12 Mar 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,
  +files/9999-0001-dracut-functions.sh-support-for-altern.patch,
  +files/9999-0002-gentoo.conf-let-udevdir-be-handled-by-.patch,
  +files/9999-0003-Use-the-same-paths-in-dracut.sh-as-tho.patch,
  +files/9999-0004-Install-dracut-install-into-libexec-di.patch, metadata.xml:
  Synced with sys-kernel/dracut-036-r4::gentoo.

  28 Jul 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,
  metadata.xml:
  Synced with sys-kernel/dracut-022::gentoo.

  10 Jun 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  sys-kernel/dracut-9999: synced with sys-kernel/dracut-019::gentoo

  26 Apr 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Call emake doc in src_compile().  Install html doc in src_install().

  26 Apr 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Synced with sys-kernel/dracut-018::gentoo. Moreover I've added asciidoc build
  dependency and removed use of WITH_SWITCH_ROOT variables.

  26 Apr 2012; Amadeusz Żołnowski <aidecoe@gentoo.org>
  files/dracut-9999-multipath-udev-rules.patch:
  Rebased multipath-udev-rules.patch against current dracut git-HEAD.

  25 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Synced with sys-kernel/dracut-017-r1::gentoo again.

  02 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,
  -files/dracut-9999-usrmount-fsck-fix.patch, metadata.xml:
  Synced with sys-kernel/dracut-017-r1::gentoo.

  12 Jan 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,
  +files/dracut-9999-usrmount-fsck-fix.patch:
  Test fix for bug #396575.

  12 Jan 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild: